--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-vernielzucht van vrachtwagenchauffeurs
+de-heilge-koe
+=============
+
+喝 drink; shout, call out
+酒 wine, spirits, liquor, alcoholic beverage
+驅 spur a horse on; expel, drive away
+動 move, happen; movement, action
